--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Print in console
         run: echo Hello GH Actions!
 
-      - name: Checkout module-connexion Repo
+      - name: Checkout symfony-shop Repo
         uses: actions/checkout@v3
         with: 
-          repository: catherine-tranchand/module-connexion
+          repository: catherine-tranchand/symfony-shop
           token: ${{ secrets.REPO_ACCES_TOKEN }}
 
 
