--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
         with: 
           repository: catherine-tranchand/symfony-shop
-          token: ${{ secrets.REPO_ACCES_TOKEN }}
+          token: ${{ secrets.SYMFONYSHOP_TOKEN_REPO }}
 
       # 2. Lancer les tests
       - name: Run tests
