--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -34,6 +34,8 @@ jobs:
           echo "Running tests..."
           cd symfony-shop
           composer require symfonycasts/tailwind-bundle
+          composer install
+
 
 
 
