--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -40,12 +40,14 @@ jobs:
       # 4. Send notifications via Google Chat
       - name: Send Notifications to Google Chat
         run: |
-          curl -X POST ${{ secrets.GOOGLE_CHAT_WEBHOOK }} \
+          curl -X POST "${{ secrets.GOOGLE_CHAT_WEBHOOK }}" \
           -H "Content-Type: application/json" \
           -d '{
             "text": "Pipeline Status: Success\nCommit: '${{ github.sha }}'\nBranch/Tag: '${{ github.ref_name }}'"
           }'
         if: always()
+
+        
 
 
 
