--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,7 +38,7 @@ jobs:
           composer install
       
       # 4. Construire l'image Docker
-      - name: Build Docker Image
+      - name: Build Docker Image symfony-shop
         uses: docker/build-push-action@v4
         with:
           file: symfony-shop/Dockerfile
